[package]
name = "webring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
mime = "0.3.17"
rand = "0.8.5"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["macros", "full"] }
tower-http = { version = "0.4.3", features = ["tower", "fs"] }
